# DJANGO-Marry-app

./: pyproject.toml
src/: db.sqlite3
src/core/: settings.py  urls.py
src/groom/: apps.py  forms.py  models.py  urls.py  views.py
src/groom/migrations/: 0001_initial.py  0002_alter_gift_uid.py  0003_guest.py  0004_gift_reservated.py  0005_gift_reservated_by.py  0006_escorts.py
src/templates/bases/: base.html
src/templates/groom/: guests.html  home.html  see_guest.html
src/templates/partials/: navbar.html
